# Copyright (C) 2023, CERN
# This software is distributed under the terms of the MIT
# licence, copied verbatim in the file "LICENSE".
# In applying this license, CERN does not waive the privileges and immunities
# granted to it by virtue of its status as Intergovernmental Organization
# or submit itself to any jurisdiction.

[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-repository"
dynamic = ["version"]
description = "The core simple repository (PEP-503) interface, including powerful component implementations suitable for use in repository clients and servers"
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX",
  "Typing :: Typed",
]
authors = [
    {name = "Phil Elson"},
    {name = "Ivan Sinkarenko"},
    {name = "Francesco Iannaccone"},
    {name = "Wouter Koorn"},
]
dependencies = [
  "httpx",
  "aiosqlite",
  "packaging",
  "typing_extensions>=4.4.0;python_version<'3.12'",
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/simple-repository/simple-repository"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest_asyncio",
  "pytest_httpx",
  "mock~=5.0.2;python_version<'3.8'",
]
dev = [
  "simple-repository[test]",
]

[tool.setuptools_scm]
write_to = "simple_repository/_version.py"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.11"
exclude = "simple_repository/tests"
strict = true

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*'
check-hidden = true
# ignore-regex = ''
# ignore-words-list = ''
